<resources>
    <string name="app_name">iMillitary</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="missions">Missions</string>
    <string name="teams">Teams</string>
    <string name="drawerText"></string>
    <string name="ammunition">Weapons</string>
    <string name="newsfeed">News Feed</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="ground_level">Ground Level</string>
    <string name="sea_level">Sea Level</string>
    <string name="city">City</string>
    <string name="weather">Weather</string>
    <string name="country">Country</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="updates">Weather Updates</string>
    <string name="coordinates">Coordinates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="description">
        To view the map please click on the button below.
        With this map you will be able to view the real-time
        location changes which will be displayed as the person transitions
    </string>
    <string name="nav_close">Close</string>
    <string name="gps_track">view missions</string>
    <string name="details">Profile Details</string>
    <string name="settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
</resources>



