<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".WeatherFragment">



<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:context=".MainActivity"-->
<!--        android:background="@color/white">-->

<!--        <ListView-->
<!--            android:id="@+id/superListView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" >-->
<!--        </ListView>-->

<!--    </LinearLayout>-->

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updates"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/colorMissions"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"/>
</LinearLayout>
    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="45dp"
        android:columnCount="2"
        android:rowCount="5">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorMissions"
            android:background="@drawable/missions"
            app:cardElevation="8dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="clear"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        />
                    <TextView
                        android:id="@+id/tv_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="clear"
                        android:textColor="@color/white"
                        android:textSize="24sp" />


                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textSize="19dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ground_level"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tv_groundLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teams"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_people_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="clear"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/colorMainBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sea_level"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tv_seaLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="4"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_column="0"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_gravity="fill"-->
<!--            android:layout_margin="15dp"-->
<!--            android:background="@color/white"-->
<!--            app:cardBackgroundColor="@color/colorMainBackground"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            app:cardElevation="8dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:gravity="center"-->
<!--                android:orientation="vertical">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/coordinates"-->
<!--                    android:textSize="22dp" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:id="@+id/tv_latitude"-->
<!--                            android:text="0.0"-->
<!--                            android:textColor="@color/white"-->
<!--                            android:textSize="24sp"/>-->
<!--                                <TextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:id="@+id/tv_longitude"-->
<!--                                android:text="0.0"-->
<!--                                android:textColor="@color/white"-->
<!--                                android:textSize="24sp"/>-->

<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="4"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_column="1"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_gravity="fill"-->
<!--            android:layout_margin="15dp"-->
<!--            android:background="@color/white"-->
<!--            app:cardBackgroundColor="@color/colorButton"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:id="@+id/bt_location"-->
<!--            app:cardElevation="8dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:gravity="center"-->
<!--                android:orientation="vertical">-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Get location"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="24sp"/>-->

<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

    </GridLayout>


    <!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:orientation="vertical">-->



<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Latitude"-->
<!--            android:textSize="32sp"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/teal_200"-->
<!--            android:layout_marginTop="16dp"/>-->


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Longitude"-->
<!--            android:textSize="32sp"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/teal_200"-->
<!--            android:layout_marginTop="16dp"/>-->








<!--
   </LinearLayout>-->

</FrameLayout>